--- a/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
+++ b/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
@@ -169,6 +169,9 @@ BODY {
                             vertical-align: middle;
                             background: url('images/common/send-mail-icon.png') 0px 0px no-repeat;
                           }
+                          .text{
+                            display: inline-block;
+                          }
                         }
                       }
                     }
