--- a/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
@@ -3,7 +3,7 @@
 @import "partials/main/apps/appMarket/_app_market_install";
 @import "partials/main/apps/_app_ratings";
 
-.app-market, .my-apps, .app-market-details{
+.app-market, .my-apps, .app-market-details, .apps-funds{
   .buttons-toolbar{
     .toolbar-btn{
       padding: 0 7px;
@@ -19,6 +19,9 @@
 
       &:hover{
         @include background(linear-gradient(top, #f6f6f6,#d8d8d8));
+      }
+      &.app-store{
+        margin-left: 190px;
       }
     }
 
