--- a/Chalkable.Web/assets/jade/activities/funds/SchoolPersonFundsView.jade
+++ b/Chalkable.Web/assets/jade/activities/funds/SchoolPersonFundsView.jade
@@ -10,21 +10,28 @@ mixin RadioButton(name, val, text, checked, isReadOnly)
         input(name = name, type="radio", value = val, checked=checked, disabled=isReadOnly)
         label(for=name)=text
 
-mixin CreditCardContainer(cardData)
-    .funds-payment-form.add-credit-card-form(attributes)
+mixin CreditCardContainer(cardData, amount)
+    +ActionForm('funds', 'addCredit').funds-payment-form.add-credit-card-form(attributes)
+        +Hidden('amount', amount)
         +MaskedInput('cardnumber','9999 9999 9999 9999')(placeholder="Card Number", value=cardData ? cardData.getCardNumber() : '').card-number.funds-text-field
         +MaskedInput('month', '99')(placeholder="MM", size="1", maxlength="2", value=cardData ? cardData.getMonth() : '').card-month.funds-text-field
         span /
         +MaskedInput('year', '9999')(placeholder="YY", size="1", maxlength="4", value=cardData ? cardData.getYear() : '').card-year.funds-text-field
         .credit-card-icon.simple-card-icon
         +MaskedInput('cvcnumber', '9999')(placeholder="CVC", size="2", maxlength="4", value=cardData ? cardData.getCvcNumber() : '').card-cvc-number.funds-text-field
-        +Button().blue-gradient-btn.add-credit-btn Add Credits
+        +Button().blue-gradient-btn.add-credit-btn
+            span Add
+            span.amount-btn-text= '$' + amount
+            span Credits
         .funds-payment-form-title Click the button to complete the transaction
 
-mixin PayPalContainer()
-    .funds-payment-form.pay-pal-form(attributes)
-        +Button().blue-gradient-btn Add Credits via
-            span PayPal
+mixin PayPalContainer(amount)
+    +ActionForm('funds', 'addCredit').funds-payment-form.pay-pal-form(attributes)
+        +Hidden('amount', amount)
+        +Button().blue-gradient-btn
+            span Add Credits via
+            span.amount-btn-text= '$' + amount
+            span.pay-pal-btn-text PayPal
         .funds-payment-form-title
             .credit-card-icon.pay-pal-1icon
             .text You'll be redirected to secure Paypal form
@@ -63,8 +70,8 @@ mixin SendMessageContainer()
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.CREDIT_CARD, 'Credit Card', true, false)
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.PAY_PAL, 'PayPal', false, false)
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.ASK_ADMIN, 'Ask Admin', false, false)
-            +CreditCardContainer(self.getCreditCardInfo()).credit-card-container
-            +PayPalContainer().x-hidden
+            +CreditCardContainer(self.getCreditCardInfo(), 10).credit-card-container
+            +PayPalContainer(10).x-hidden
             +SendMessageContainer().x-hidden
     .funds-history-container.funds-container
         .title History
