added infinite scroll to feed page

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -116,6 +116,7 @@ $red-color: #842727;
       font: bold 38px Arial;
       color: #757575;
       margin-right: 45px;
+      height:46px;
     }
 
     .show-student-grades{
