--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -17,7 +17,14 @@ div(class = noStarred ? "no-starred" : "").feed-container
         label#feed-arrow.blue-arrow.left-up-arrow=Msg.See_more_items
         label#no-items.blue-arrow.gray.div=Msg.No_items_marked_important
     else
-        +Grid('feed', 'list', self, [true, self.starredOnly, selectedId]).not-transparent
-            +GridBody()
+        .not-transparent
+            +ListView(self.items)(
+                infiniteScroll = true,
+                goTopButton = true,
+                service = chlk.services.AnnouncementService,
+                method = "getAnnouncements",
+                tpl = chlk.templates.announcement.FeedItemTpl,
+                paramsPrepend = [selectedId, self.starredOnly]
+            )
                 each item in self.items
                     +FeedItem(item)
