fixed funds page added addCredit method to FundController

--- a/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
+++ b/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
@@ -70,6 +70,17 @@ BODY {
                         }
                       }
 
+                      .view-text-field{
+                        border: none;
+                        background: none;
+                        font-size: 16px;
+                        font-weight: bold;
+                      }
+
+                      .close-icon{
+                        background: url('images/funds/close-icon.png') 0px 0px no-repeat;
+                      }
+                      
                       .amount-container{
                         .other-field{
                           margin-left: 30px;
@@ -81,6 +92,37 @@ BODY {
                       .method-container{
                       }
 
+                      .funds-transaction-result-view{
+                        border-bottom: 1px solid #d7d7d7;
+                        border-top: 1px solid #d7d7d7;
+                        padding: 45px 0px 30px 0px;
+                        text-align: center;
+                        width: 470px;
+                        margin-top: 30px;
+
+                        .text{
+                          font-size: 18px;
+                          font-weight: bold;
+                          text-shadow: 1px 1px 0 white;
+                        }
+                        .redirect-link{
+                          margin-top: 30px;
+                          cursor: pointer;
+                          color: #336a82;
+                          text-decoration: underline;
+                        }
+                        .transaction-success-view{
+                          .text{
+                            color: green;
+                          }
+                        }
+                        .transaction-fail-view{
+                          .text{
+                            color: red;
+                          }
+                        }
+                      }
+
                       .funds-payment-form{
 
                         width: 350px;
@@ -88,6 +130,16 @@ BODY {
                         padding: 15px 15px 0px 15px;
                         margin-top: 30px;
                         @include border-radius(3px);
+                        position: relative;
+
+                        .close-icon{
+                          width: 15px;
+                          height: 15px;
+                          position: absolute;
+                          top: 7px;
+                          right: 5px;
+
+                        }
 
                         .funds-text-field{
                           font-size: 16px;
