--- a/Chalkable.Web/assets/jade/activities/funds/SchoolPersonFundsView.jade
+++ b/Chalkable.Web/assets/jade/activities/funds/SchoolPersonFundsView.jade
@@ -10,25 +10,31 @@ mixin RadioButton(name, val, text, checked, isReadOnly)
         input(name = name, type="radio", value = val, checked=checked, disabled=isReadOnly)
         label(for=name)=text
 
-mixin CreditCardContainer(cardData, amount)
-    +ActionForm('funds', 'addCredit').funds-payment-form.add-credit-card-form(attributes)
-        +Hidden('amount', amount)
-        +MaskedInput('cardnumber','9999 9999 9999 9999')(placeholder="Card Number", value=cardData ? cardData.getCardNumber() : '').card-number.funds-text-field
-        +MaskedInput('month', '99')(placeholder="MM", size="1", maxlength="2", value=cardData ? cardData.getMonth() : '').card-month.funds-text-field
-        span /
-        +MaskedInput('year', '9999')(placeholder="YY", size="1", maxlength="4", value=cardData ? cardData.getYear() : '').card-year.funds-text-field
-        .credit-card-icon.simple-card-icon
-        +MaskedInput('cvcnumber', '9999')(placeholder="CVC", size="2", maxlength="4", value=cardData ? cardData.getCvcNumber() : '').card-cvc-number.funds-text-field
-        +Button().blue-gradient-btn.add-credit-btn
-            span Add
-            span.amount-btn-text= '$' + amount
-            span Credits
-        .funds-payment-form-title Click the button to complete the transaction
+
+//mixin CreditCardContainer(tpl, cardData, amount)
+//    +ActionForm('funds', 'addCredit').funds-payment-form.add-credit-card-form(attributes)
+//        +Hidden('amount', amount)
+//        div(class=cardData ? "x-hidden" : "").edit-form
+//            +MaskedInput('cardnumber','9999 9999 9999 9999')(placeholder="Card Number", value=cardData ? cardData.getCardNumber() : '').card-number.funds-text-field
+//            +MaskedInput('month', '99')(placeholder="MM", size="1", maxlength="2", value=cardData ? cardData.getMonth() : '').card-month.funds-text-field
+//            span /
+//            +MaskedInput('year', '9999')(placeholder="YY", size="1", maxlength="4", value=cardData ? cardData.getYear() : '').card-year.funds-text-field
+//            div(class=cardData ? cardData.getMappedCardType().cssClass : '.simple-card-icon').credit-card-icon
+//            +MaskedInput('cvcnumber', '9999')(placeholder="CVC", size="2", maxlength="4", value=cardData ? cardData.getCvcNumber() : '').card-cvc-number.funds-text-field
+//        div(class=!cardData ? "x-hidden" : "").saved-card-form
+//            div(class=cardData.getMappedCardType().cssClass || '.simple-card-icon').credit-card-icon
+//            +MaskedInput('cardviewnumber', '^^^^ ^^^^ ^^^^ 9999')(value=tpl.getHiddenCreditNumber(), readonly).view-text-field
+//            .close-btn.close-icon
+//        +Button()(type="submit").blue-gradient-btn.add-credit-btn
+//            span Add
+//            span.amount-btn-text= '$' + amount
+//            span Credits
+//        .funds-payment-form-title Click the button to complete the transaction
 
 mixin PayPalContainer(amount)
-    +ActionForm('funds', 'addCredit').funds-payment-form.pay-pal-form(attributes)
+    +ActionForm('funds', 'payPal').funds-payment-form.pay-pal-form(attributes)
         +Hidden('amount', amount)
-        +Button().blue-gradient-btn
+        +Button()(type="submit").blue-gradient-btn
             span Add Credits via
             span.amount-btn-text= '$' + amount
             span.pay-pal-btn-text PayPal
@@ -43,6 +49,17 @@ mixin SendMessageContainer()
             .send-message-icon
             .text We'll send a request message to
 
+
+mixin TransactionResultView(transactionSuccess, balance)
+    .funds-transaction-result-view
+        if transactionSuccess == true
+            .transaction-success-view
+                .text=Msg.Add_Credit_Transaction_Success(balance)
+                .redirect-link Add more funds
+        else
+            .transaction-fail-view
+                .text=Msg.Add_Credit_Transaction_Fail
+                .redirect-link Try again
 
 .funds-view.school-person-funds-view.apps-funds
     +AppMarketToolbar(null, null, null)
@@ -70,12 +87,15 @@ mixin SendMessageContainer()
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.CREDIT_CARD, 'Credit Card', true, false)
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.PAY_PAL, 'PayPal', false, false)
                     +RadioButton('method', chlk.activities.funds.BuyCreditMethods.ASK_ADMIN, 'Ask Admin', false, false)
-            +CreditCardContainer(self.getCreditCardInfo(), 10).credit-card-container
-            +PayPalContainer(10).x-hidden
-            +SendMessageContainer().x-hidden
+            div(class=self.showTransactionResultForm() ? 'x-hidden' : '').action-forms
+                .add-credit-card-container
+                    +RenderWith(self.getCreditCardInfo(), chlk.templates.funds.CreditCardTpl)
+                +PayPalContainer(10).x-hidden
+                +SendMessageContainer().x-hidden
+            if self.showTransactionResultForm()
+                +TransactionResultView(self.isTransactionSuccess(), self.getCurrentBalance())
     .funds-history-container.funds-container
         .title History
         .separator
-        -console.log(chlk.templates.funds.FundsHistoryTpl)
-        .inner-container
+        .inner-container.funds-history-grid
             +RenderWith(self.getFundsHistory(), chlk.templates.funds.FundsHistoryTpl)
